--- a/index.html
+++ b/index.html
@@ -1,114 +1,99 @@
 <!DOCTYPE html>
-<html lang="si">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TikTok Downloader</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     body {
+      background: #121212;
+      color: white;
       font-family: Arial, sans-serif;
-      background: #111;
-      color: #fff;
       text-align: center;
       padding: 2rem;
     }
     input, button {
-      padding: 0.7rem;
-      font-size: 1rem;
+      padding: 0.8rem;
       width: 90%;
       max-width: 500px;
-      margin: 0.5rem auto;
-      display: block;
+      margin: 0.5rem;
       border: none;
       border-radius: 5px;
     }
     input {
       background: #222;
-      color: #fff;
+      color: white;
     }
     button {
-      background: #ff2d55;
-      color: #fff;
-      cursor: pointer;
-    }
-    .video-card {
-      background: #1e1e1e;
-      border-radius: 10px;
-      padding: 1rem;
-      max-width: 450px;
-      margin: 1rem auto;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-    }
-    img {
-      width: 100%;
-      border-radius: 10px;
-    }
-    .author {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 1rem;
-    }
-    .author img {
-      width: 50px;
-      border-radius: 50%;
-    }
-    .buttons a {
-      margin: 0.5rem;
-      display: inline-block;
-      padding: 0.6rem 1rem;
       background: #00c853;
       color: white;
+      cursor: pointer;
+    }
+    .video-box {
+      background: #1e1e1e;
+      padding: 1rem;
+      margin-top: 1rem;
+      border-radius: 10px;
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+    .links a {
+      display: inline-block;
+      margin: 0.5rem;
+      background: #2962ff;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
       text-decoration: none;
-      border-radius: 6px;
     }
   </style>
 </head>
 <body>
   <h2>TikTok Downloader</h2>
-  <input type="text" id="tiktokUrl" placeholder="Paste TikTok URL here" />
-  <button onclick="getVideo()">Download</button>
+  <input type="text" id="tiktokUrl" placeholder="Paste TikTok link here" />
+  <button onclick="fetchVideo()">Get Video</button>
 
   <div id="result"></div>
 
   <script>
-    async function getVideo() {
-      const url = document.getElementById('tiktokUrl').value.trim();
-      if (!url) return alert("Please enter a TikTok link");
-
-      const api = `https://api-dark-shan-yt.koyeb.app/download/tiktok?url=${encodeURIComponent(url)}&apikey=edbcfabbca5a9750`;
+    async function fetchVideo() {
+      const inputUrl = document.getElementById('tiktokUrl').value.trim();
+      const apiKey = "edbcfabbca5a9750";
+      const apiUrl = `https://api-dark-shan-yt.koyeb.app/download/tiktok?url=${encodeURIComponent(inputUrl)}&apikey=${apiKey}`;
+      const resultDiv = document.getElementById('result');
+      resultDiv.innerHTML = "Loading...";
 
       try {
-        const res = await fetch(api);
+        const res = await fetch(apiUrl);
         const json = await res.json();
 
-        if (json.status && json.result) {
-          const data = json.result;
+        console.log("API Response:", json); // DEBUG LINE
 
-          document.getElementById('result').innerHTML = `
-            <div class="video-card">
-              <img src="${data.cover}" alt="cover" />
-              <div class="author">
-                <img src="${data.author.avatar}" alt="avatar" />
-                <div>
-                  <strong>${data.author.nickname}</strong><br/>
-                  @${data.author.username}
-                </div>
-              </div>
-              <p>${data.desc}</p>
-              <div class="buttons">
-                <a href="${data.nowm}" download>Download (No Watermark)</a>
-                <a href="${data.wm}" download>Download (Watermarked)</a>
-                <a href="${data.music}" download>Download Music</a>
+        if (json.status && json.result) {
+          const v = json.result;
+          resultDiv.innerHTML = `
+            <div class="video-box">
+              <img src="${v.cover}" alt="Cover"/>
+              <h3>@${v.author?.username || v.author?.unique_id}</h3>
+              <p>${v.desc || 'No description'}</p>
+              <div class="links">
+                <a href="${v.nowm}" download>Download No Watermark</a>
+                <a href="${v.wm}" download>Download Watermark</a>
+                <a href="${v.music}" download>Download Music</a>
               </div>
             </div>
           `;
         } else {
-          document.getElementById('result').innerHTML = "Invalid or unavailable video.";
+          resultDiv.innerHTML = "Failed to load video. Check TikTok URL or try again.";
         }
-      } catch (e) {
-        console.error(e);
-        document.getElementById('result').innerHTML = "Error fetching video data.";
+      } catch (err) {
+        console.error(err);
+        resultDiv.innerHTML = "Error fetching video data.";
       }
     }
   </script>
